# Knowledge-Injection-XAI

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/adapters/lora_r16/: README.md  adapter_config.json  adapter_model.safetensors
artifacts/adapters/lora_r32/: adapter_config.json
artifacts/adapters/lora_r4/: adapter_config.json  adapter_model.safetensors
artifacts/adapters_enhanced/lora_r16/: README.md  adapter_config.json
artifacts/adapters_enhanced/lora_r32/: README.md  adapter_config.json
artifacts/adapters_enhanced/lora_r4/: README.md  adapter_config.json  adapter_model.safetensors
configuration/: config.yaml  train_config.yaml
logging/: experiments_log.csv  training_metrics.csv
notebooks/: results_presentation.ipynb
src/: configs.py  download_assets.py  run_bronze.py  run_golden.py  run_ood.py  run_pipeline.py  run_silver.py  run_train.py  run_train_llora.py
src/ml/: adapters.py
src/pipeline/: __init__.py  bronze_layer.py  golden_layer.py  ood_layer.py  silver_layer.py
src/utils/: telemetry.py  train_configs.py
src/xai/: metrics.py
