[project]
name = "knowledge-injection-xai"
version = "0.1.0"
description = "Knowledge Injection via XAI: Predicting OOD Robustness with Attention Metrics"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Domenico"}
]
keywords = ["xai", "explainability", "lora", "vision-transformer", "robustness", "ood"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.44.0",
    "accelerate>=0.30.0",
    "datasets>=3.0.0",
    "peft>=0.11.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
    "pyspark>=3.5.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "psutil>=6.0.0",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
notebook = [
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
]

[project.urls]
Repository = "https://github.com/D0men1c0/Knowledge-Injection-XAI"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true